# financeHelper

./: .gitignore  CMakeLists.txt  main.cpp  test_add_income_dialog.cpp  test_api.cpp
include/: api.h  chart_widget.h  image_processing.h  mainwindow.h  matplotlibcpp.h  storage.h  text_recognition.h
src/: api.cpp  chart_widget.cpp  image_processing.cpp  mainwindow.cpp  storage.cpp  text_recognition.cpp
ui/: add_income_dialog.cpp  add_income_dialog.h  add_income_dialog.ui  expense_report_dialog.cpp  expense_report_dialog.h  expense_report_dialog.ui  mainwindow.ui  report_dialog.cpp  report_dialog.h  report_dialog.ui  upload_receipt_dialog.cpp  upload_receipt_dialog.h  upload_receipt_dialog.ui
